added notice component and updated language file for it, but it is incomplete

--- a/lang/en.json
+++ b/lang/en.json
@@ -25,6 +25,9 @@
       "chief minister name": "Shri Manohar Lal Khattar",
       "chief minister designation": "Hon'ble Chief Minister Haryana",
       "read more": "Read More"
+    },
+    "notices":{
+      "heading":"NOTICE BOARD"
     }
   }
 }
