--- a/lang/hi.json
+++ b/lang/hi.json
@@ -25,6 +25,9 @@
       "chief minister name": "श्री मनोहर लाल खट्टर",
       "chief minister designation": "माननीय मुख्यमंत्री हरियाणा",
       "read more": "और पढ़ें"
+    },
+    "notices":{
+      "heading":"सूचना पट्ट"
     }
   }
 }
