fixed ProfileCard.jsx edited notices view all button AutoScrollFeatures.jsx fixed

--- a/lang/hi.json
+++ b/lang/hi.json
@@ -27,7 +27,8 @@
       "read more": "और पढ़ें"
     },
     "notices":{
-      "heading":"सूचना पट्ट"
+      "heading":"सूचना पट्ट",
+      "viewAll": "सभी देखें"
     }
   }
 }
