--- a/lang/hi.json
+++ b/lang/hi.json
@@ -3,11 +3,13 @@
     "navbar": {
       "Home": "होम",
       "About Us": "हमारे बारे में",
+      "Administration": "प्रशासन",
       "Academics": "शिक्षा",
       "Students": "छात्र",
       "Admission": "प्रवेश",
       "Research": "अनुसंधान",
-      "Resources": "संसाधन"
+      "Resources": "संसाधन",
+      "About University": "विश्वविद्यालय के बारे में"
     },
     "heading": {
       "tagline": "वह दुनिया बनाएं जिसमें आप रहना चाहते हैं।"
