--- a/lang/en.json
+++ b/lang/en.json
@@ -31,6 +31,13 @@
     "notices":{
       "heading":"NOTICE BOARD",
       "viewAll": "View All"
+    },
+    "footer": {
+      "Subscribe for Newsletter": "Subscribe for Newsletter",
+      "Our Campus": "Our Campus"
+    },
+    "autoscrollfeatures": {
+
     }
   }
 }
