--- a/lang/en.json
+++ b/lang/en.json
@@ -9,7 +9,81 @@
       "Admission": "Admission",
       "Research": "Research",
       "Resources": "Resources",
-      "About University": "About University"
+      "About University": "About University",
+      "Governance": "Governance",
+      "Alumni": "Alumni",
+      "Ranking and Accreditation": "Ranking and Accreditation",
+      "NIRF": "NIRF",
+      "ARIIA": "ARIIA",
+      "NAAC": "NAAC",
+      "NBA":"NBA",
+      "Legacy": "Legacy",
+      "Our Inspiration": "Our Inspiration",
+      "VC's Message": "VC's Message",
+      "Vision & Mission": "Vision & Mission",
+      "Incumbency Board": "Incumbency Board",
+      "University Act": "University Act",
+      "Organogram Structure": "Organogram Structure",
+      "University Court": "University Court",
+      "Executive Council": "Executive Council",
+      "Academic Council": "Academic Council",
+      "Planning Board": "Planning Board",
+      "Finance Committee": "Finance Committee",
+      "Board of Faculty": "Board of Faculty",
+      "Building & Work Committee": "Building & Work Committee",
+      "Central Purchase Committee": "Central Purchase Committee",
+      "Research Permission Board": "Research Permission Board",
+      "National Education Policy": "National Education Policy",
+      "Chancellor": "Chancellor",
+      "Vice Chancellor": "Vice Chancellor",
+      "Registrar": "Registrar",
+      "Deans": "Deans",
+      "Dean (Quality Assurance)": "Dean (Quality Assurance)",
+      "Dean of Institutions": "Dean of Institutions",
+      "Dean (Faculty E&T)": "Dean (Faculty E&T)",
+      "Dean (Faculty I&C)": "Dean (Faculty I&C)",
+      "Dean (Faculty Mgmt.)": "Dean (Faculty Mgmt.)",
+      "Chairpersons": "Chairpersons",
+      "Computer Engineering": "Computer Engineering",
+      "Computer Applications": "Computer Applications",
+      "Electrical Engineering": "Electrical Engineering",
+      "Electronics Engineering": "Electronics Engineering",
+      "Mechanical Engineering": "Mechanical Engineering",
+      "Offices": "Offices",
+      "Admissions": "Admissions",
+      "Diploma & UG Admissions": "Diploma & UG Admissions",
+      "Establishment": "Establishment",
+      "Accounts": "Accounts",
+      "Purchase": "Purchase",
+      "Directors": "Directors",
+      "IQAC": "IQAC",
+      "Alumni & Affairs": "Alumni & Affairs",
+      "UCC & DA": "UCC & DA",
+      "IR Cell": "IR Cell",
+      "International Affair Cell": "International Affair Cell",
+      "Admissions": "Admissions",
+      "Information Brochure": "Information Brochure",
+      "Fee Structure": "Fee Structure",
+      "Courses Offered": "Courses Offered",
+      "PG Admissions": "PG Admissions",
+      "PhD Admissions": "PhD Admissions",
+      "International Students": "International Students",
+      "Announcements": "Announcements",
+      "Students": "Students",
+      "Common Infrastructure Facilities": "Common Infrastructure Facilities",
+      "Medical  Centre": "Medical  Centre",
+      "Hostel": "Hostel",
+      "Transport": "Transport",
+      "Auditorium": "Auditorium",
+      "Placements": "Placements",
+      "Hall of Fame": "Hall of Fame",
+      "Entitlement": "Entitlement",
+      "Student Window": "Student Window",
+      "Grievances": "Grievances",
+      "Research": "Research",
+      "Research Policy": "Research Policy",
+      "Facility & Grants": "Facility & Grants"
+      
     },
     "heading": {
       "tagline": "Create the world you want to live in."
