--- a/lang/hi.json
+++ b/lang/hi.json
@@ -9,7 +9,77 @@
       "Admission": "प्रवेश",
       "Research": "अनुसंधान",
       "Resources": "संसाधन",
-      "About University": "विश्वविद्यालय के बारे में"
+      "About University": "विश्वविद्यालय के बारे में",
+      "Governance": "शासन",
+      "Alumni": "एलुमनाई",
+      "Ranking and Accreditation": "रैंकिंग और प्रत्यायन",
+      "NIRF": "एनआईआरएफ",
+      "ARIIA": "एआरआईआईए",
+      "NAAC": "नैक",
+      "NBA":"एनबीए",
+      "Legacy": "विरासत",
+      "Our Inspiration": "हमारी प्रेरणा",
+      "VC's Message": "VC's ",
+      "Vision & Mission": "विजन एंड मिशन",
+      "Incumbency Board": "सत्ता बोर्ड",
+      "University Act": "विश्वविद्यालय अधिनियम",
+      "Organogram Structure": "संगठनात्मक संरचना",
+      "University Court": "यूनिवर्सिटी कोर्ट",
+      "Executive Council": "कार्यकारी परिषद",
+      "Academic Council": "शैक्षणिक परिषद",
+      "Planning Board": "योजना बोर्ड",
+      "Finance Committee": "वित्त समिति",
+      "Board of Faculty": "संकाय मंडल",
+      "Building & Work Committee": "भवन और कार्य समिति",
+      "Central Purchase Committee": "केंद्रीय खरीद समिति",
+      "Research Permission Board": "रिसर्च परमिशन बोर्ड",
+      "National Education Policy": "राष्ट्रीय शिक्षा नीति",
+      "Chancellor": "कुलाधिपति",
+      "Vice Chancellor": "कुलपति",
+      "Registrar": "रजिस्ट्रार",
+      "Deans": "डीन",
+      "Dean (Quality Assurance)" :"डीन (गुणवत्ता आश्वासन)",
+      "Dean of Institutions": "संस्थानों के डीन",
+      "Dean (Faculty E&T)": "डीन (संकाय ई एंड टी)",
+      "Dean (Faculty I&C)": "डीन (संकाय आई एंड सी)",
+      "Dean (Faculty Mgmt.)": "डीन (फैकल्टी एमजीएमटी।)",
+      "Chairpersons": "अध्यक्ष",
+      "Computer Engineering": "कंप्यूटर इंजीनियरिंग",
+      "Computer Applications": "कंप्यूटर अनुप्रयोग",
+      "Electrical Engineering": "इलेक्ट्रिकल इंजीनियरिंग",
+      "Electronics Engineering": "इलेक्ट्रॉनिक्स इंजीनियरिंग",
+      "Mechanical Engineering": "मैकेनिकल इंजीनियरिंग",
+      "Offices": "कार्यालय",
+      "Admissions": "दाखिला",
+      "Diploma & UG Admissions": "डिप्लोमा और यूजी प्रवेश",
+      "Establishment": "स्थापना",
+      "Accounts": "खाते",
+      "Purchase": "खरीदें",
+      "Directors": "आईक्यूएसी",
+      "IQAC": "पूर्व छात्र और मामले",
+      "Alumni & Affairs": "पूर्व छात्र और मामले",
+      "UCC & DA": "यूसीसी और डीए",
+      "IR Cell": "आईआर सेल",
+      "International Affair Cell": "इंटरनेशनल अफेयर सेल",
+      "Information Brochure": "सूचना विवरणिका",
+      "Fee Structure": "शुल्क संरचना",
+      "Courses Offered": "पाठ्यक्रम की पेशकश",
+      "PG Admissions": "पीजी प्रवेश",
+      "PhD Admissions": "पीएचडी प्रवेश",
+      "International Students": "अंतर्राष्ट्रीय छात्र",
+      "Announcements": "घोषणाएँ",
+      "Common Infrastructure Facilities": "कॉमन इंफ्रास्ट्रक्चर फैसिलिटीज",
+      "Medical  Centre": "मेडिकल सेंटर",
+      "Hostel": "हॉस्टल",
+      "Transport": "परिवहन",
+      "Auditorium": "ऑडिटोरियम",
+      "Placements": "प्लेसमेंट",
+      "Hall of Fame": "हॉल ऑफ़ फ़ेम",
+      "Entitlement": "अधिकार",
+      "Student Window": "छात्र विंडो",
+      "Grievances": "शिकायतें",
+      "Research Policy": "अनुसंधान नीति",
+      "Facility & Grants": "सुविधा और अनुदान"
     },
     "heading": {
       "tagline": "वह दुनिया बनाएं जिसमें आप रहना चाहते हैं।"
