--- a/lang/en.json
+++ b/lang/en.json
@@ -42,7 +42,7 @@
       "Dean of Institutions": "Dean of Institutions",
       "Dean (Faculty E&T)": "Dean (Faculty E&T)",
       "Dean (Faculty I&C)": "Dean (Faculty I&C)",
-      "Dean (Faculty Mgmt.)": "Dean (Faculty Mgmt.)",
+      "Dean (Faculty Mgmt)": "Dean (Faculty Mgmt.)",
       "Chairpersons": "Chairpersons",
       "Computer Engineering": "Computer Engineering",
       "Computer Applications": "Computer Applications",
