--- a/lang/hi.json
+++ b/lang/hi.json
@@ -42,7 +42,7 @@
       "Dean of Institutions": "संस्थानों के डीन",
       "Dean (Faculty E&T)": "डीन (संकाय ई एंड टी)",
       "Dean (Faculty I&C)": "डीन (संकाय आई एंड सी)",
-      "Dean (Faculty Mgmt.)": "डीन (फैकल्टी एमजीएमटी।)",
+      "Dean (Faculty Mgmt)": "डीन (फैकल्टी एमजीएमटी।)",
       "Chairpersons": "अध्यक्ष",
       "Computer Engineering": "कंप्यूटर इंजीनियरिंग",
       "Computer Applications": "कंप्यूटर अनुप्रयोग",
