department page navbar done

--- a/lang/en.json
+++ b/lang/en.json
@@ -82,7 +82,13 @@
       "Grievances": "Grievances",
       "Research": "Research",
       "Research Policy": "Research Policy",
-      "Facility & Grants": "Facility & Grants"
+      "Facility & Grants": "Facility & Grants",
+      "Ordinances": "Ordinances",
+      "Faculties": "Faculties",
+      "Departments": "Departments",
+      "Community College of Skill Development": "Community College of Skill Development",
+      "Scheme & Syllabus": "Scheme & Syllabus",
+      "Common Academic Facilities": "Common Academic Facilities"
       
     },
     "heading": {
