All navbar Strings updated

--- a/lang/hi.json
+++ b/lang/hi.json
@@ -79,7 +79,81 @@
       "Student Window": "छात्र विंडो",
       "Grievances": "शिकायतें",
       "Research Policy": "अनुसंधान नीति",
-      "Facility & Grants": "सुविधा और अनुदान"
+      "Facility & Grants": "सुविधा और अनुदान",
+      "Ordinances": "अध्यादेश",
+      "Faculties": "संकाय",
+      "Departments": "विभाग",
+      "Community College of Skill Development": "कौशल विकास के सामुदायिक कॉलेज",
+      "Scheme & Syllabus": "योजना और पाठ्यक्रम",
+      "Common Academic Facilities": "सामान्य शैक्षणिक सुविधाएं",
+      "R & D Awards": "आर एंड डी अवार्ड्स",
+      "Publication Award": "प्रकाशन पुरस्कार",
+      "Seed Money Award"  : "सीड मनी अवार्ड",
+      "Honorary Award": "मानद पुरस्कार",
+      "Notifications": "सूचनाएं",
+      "Publications": "प्रकाशन",
+      "Journals": "जर्नल्स",
+      "Conferences": "सम्मेलन",
+      "Book/Book Chapters": "पुस्तक/पुस्तक अध्याय",
+      "FDP/Workshop/Seminar": "एफडीपी/वर्कशॉप/सेमिनार",
+      "Fellowships": "फ़ेलोशिप",
+      "MOUs/Industry Collaborations": "एमओयू/उद्योग सहयोग",
+      "Sponsored Projects/Patents": "प्रायोजित परियोजनाएं/पेटेंट",
+      "Downloads": "डाउनलोड",
+      "Library": "लाइब्रेरी",
+      "Medical Facility": "चिकित्सा सुविधा",
+      "Hostel Facility": "छात्रावास सुविधा",
+      "Boys Hostel": "लड़कों छात्रावास",
+      "Girls Hostel": "गर्ल्स हॉस्टल",
+      "Canteen": "कैंटीन",
+      "Mess": "मेस",
+      "Multi-Purpose Halls": "बहुउद्देश्यीय हॉल",
+      "Shakuntalam": "शकुंतलम",
+      "Multi-Media Centre": "मल्टी-मीडिया सेंटर",
+      "Sports Facilities": "खेल सुविधाएं",
+      "Indoor": "इनडोर",
+      "Outdoor": "आउटडोर",
+      "Academic & Infrastructure Facilites": "शैक्षणिक और बुनियादी ढांचा सुविधाएं",
+      "Labs/Workshops": "लैब्स/वर्कशॉप",
+      "Incubation": "ऊष्मायन",
+      "Central Computer Centre": "सेंट्रल कंप्यूटर सेंटर",
+      "Digital Studio": "डिजिटल स्टूडियो",
+      "Centre of Excellence": "उत्कृष्टता केंद्र",
+      "Robotics": "रोबोटिक्स",
+      "Advance Machines": "एडवांस मशीनें",
+      "Smart Board": "स्मार्ट बोर्ड",
+      "IOT Centre": "आईओटी केंद्र",
+      "Clean Lab": "क्लीन लैब",
+      "CNC Lab": "सीएनसी लैब",
+      "Language Lab": "भाषा लैब",
+      "E-Resources": "ई-संसाधन",
+      "LCS": "एलसीएस",
+      "Maintenance": "रखरखाव",
+      "Sports": "खेल",
+      "Workshop Superintendent": "कार्यशाला अधीक्षक",
+      "Public Relations": "जनसंपर्क",
+      "Proctor": "प्रोक्टर",
+      "Health Centre": "स्वास्थ्य केंद्र",
+      "Affiliation & Registration": "संबद्धता और पंजीकरण",
+      "Management Studies": "प्रबंधन अध्ययन",
+      "Environmental Sciences & Engineering": "पर्यावरण विज्ञान और इंजीनियरिंग",
+      "Civil Engineering": "सिविल इंजीनियरिंग",
+      "Physics": "भौतिकी",
+      "Chemistry": "रसायन विज्ञान",
+      "Mathematics": "गणित",
+      "Communication & Media Technology": "संचार और मीडिया प्रौद्योगिकी",
+      "Life Sciences": "जीवन विज्ञान",
+      "Centre for Energy Studies": "ऊर्जा अध्ययन केंद्र",
+      "Dean (Faculty Sciences)": "डीन (संकाय विज्ञान)",
+      "Dean (Student Welfare)": "डीन (छात्र कल्याण)",
+      "Dean (Academic Affairs )": "डीन (शैक्षणिक मामले)",
+      "Dean (R&D)": "डीन (आर एंड डी)",
+      "Dean (Faculty of Life Sciences)": "डीन (जीवन विज्ञान संकाय)",
+      "Dean Faculty of Interdisciplinary Studies & Research": "इंटरडिसिप्लिनरी स्टडीज एंड रिसर्च के डीन फैकल्टी",
+      "Dean (Colleges)": "डीन (कॉलेज)",
+      "Dean (Construction & Maintenance)": "डीन (निर्माण और रखरखाव)",
+      "Multimedia Centre": "मल्टीमीडिया सेंटर",
+      "Sport Facilities": "खेल सुविधाएं"
     },
     "heading": {
       "tagline": "वह दुनिया बनाएं जिसमें आप रहना चाहते हैं।"
