--- a/lang/en.json
+++ b/lang/en.json
@@ -138,7 +138,38 @@
       
     },
     "autoscrollfeatures": {
+      "A": "A",
+      "Grade NAAC Accredited": "Grade NAAC Accredited",
+      "60":"60",
+      "Lakhs highest package":"Lakhs highest package",
+      "2000":"2000",
+      "QS World University Ranking":"QS World University Ranking",
+      "1000+":"1000+",
+      "Placement offers":"Placement offers",
+      "60+":"60+",
+      "Companies visit":"Companies visit",
+      "No.1":"No.1",
+      "University in terms of placements in Haryana":"University in terms of placements in Haryana",
+      "5000+":"5000+",
+      "Students":"Students",
+      "30":"30",
+      "Acre Campus":"Acre Campus",
+      "12": "12",
+      "Centres of Excellence":"Centres of Excellence"
+
+
+
+
+
+
+
+
+
+
+
+
 
     }
+
   }
 }
