inview test on production

--- a/lang/en.json
+++ b/lang/en.json
@@ -6,7 +6,7 @@
       "Administration": "Administration",
       "Academics": "Academics",
       "Students": "Students",
-      "Admission": "Admission",
+      "Admission": "Admissions",
       "Research": "Research",
       "Resources": "Resources",
       "About University": "About University",
@@ -14,6 +14,7 @@
       "Alumni": "Alumni",
       "Ranking and Accreditation": "Ranking and Accreditation",
       "NIRF": "NIRF",
+      "Wellfare": "Wellfare",
       "ARIIA": "ARIIA",
       "NAAC": "NAAC",
       "NBA":"NBA",
@@ -213,7 +214,7 @@
       "Placement offers":"Placement offers",
       "60+":"60+",
       "Companies visit":"Companies visit",
-      "No.1":"No.1",
+      "No 1":"No.1",
       "University in terms of placements in Haryana":"University in terms of placements in Haryana",
       "5000+":"5000+",
       "Students":"Students",
