--- a/lang/en.json
+++ b/lang/en.json
@@ -158,7 +158,7 @@
 
     },
     "heading": {
-      "tagline": "Create the world you want to live in."
+      "tagline": "The true laboratory is the mind, where behind illusions we uncover the laws of truth."
     },
     "button": {
       "Find a Program": "Find a Program",
