--- a/lang/en.json
+++ b/lang/en.json
@@ -158,7 +158,8 @@
 
     },
     "heading": {
-      "tagline": "The true laboratory is the mind, where behind illusions we uncover the laws of truth."
+      "tagline": "The true laboratory is the mind, where behind illusions we uncover the laws of truth.",
+      "jcbose": "Jagdish Chandra Bose"
     },
     "button": {
       "Find a Program": "Find a Program",
