--- a/lang/hi.json
+++ b/lang/hi.json
@@ -156,7 +156,8 @@
       "Sport Facilities": "खेल सुविधाएं"
     },
     "heading": {
-      "tagline": "वह दुनिया बनाएं जिसमें आप रहना चाहते हैं।"
+      "tagline": "सच्ची प्रयोगशाला मन है, जहां भ्रम के पीछे हम सत्य के नियमों को उजागर करते हैं।",
+      "jcbose": "जगदीश चंद्र बोस"
     },
     "button": {
       "Find a Program": "एक प्रोग्राम खोजें",
