--- a/lang/hi.json
+++ b/lang/hi.json
@@ -1,5 +1,6 @@
 {
   "home": {
+    "JCBoseUST": "जे.सी. बोस विज्ञान और प्रौद्योगिकी विश्वविद्यालय, वाईएमसीए, फरीदाबाद",
     "navbar": {
       "Home": "होम",
       "About Us": "हमारे बारे में",
@@ -153,7 +154,8 @@
       "Dean (Colleges)": "डीन (कॉलेज)",
       "Dean (Construction & Maintenance)": "डीन (निर्माण और रखरखाव)",
       "Multimedia Centre": "मल्टीमीडिया सेंटर",
-      "Sport Facilities": "खेल सुविधाएं"
+      "Sport Facilities": "खेल सुविधाएं",
+      "Welfare": "कल्याण"
     },
     "heading": {
       "tagline": "सच्ची प्रयोगशाला मन है, जहां भ्रम के पीछे हम सत्य के नियमों को उजागर करते हैं।",
@@ -223,6 +225,27 @@
       "Centres of Excellence":"उत्कृष्टता के केंद्र"
       
 
+    },
+    "scrollHint":
+    {
+      "EXPLORE": "और घूमें "
+    },
+    "featureCard": {
+      "Read More":"और  पढ़ें",
+      "Campus Life": "कैंपस लाइफ",
+      "Campus Life description":"कैंपस का जीवन उत्साह और रोमांच से भरा होता है। करने के लिए हमेशा नई चीजें होती हैं और नए लोगों से मिलना होता है।",
+      "Placements": "प्लेसमेंट",
+      "Placements description": "छात्रों के लिए ऐसी कंपनियों में प्लेसमेंट खोजने के बहुत सारे अवसर हैं जो उनके कौशल और रुचि के अनुकूल हों।",
+      "Centres of Excellence": "उत्कृष्टता केंद्र",
+      "Centres of Excellence description": "उत्कृष्टता केंद्र एक विश्व स्तरीय सुविधा है जो उत्कृष्ट शोध प्रदान करती है।",
+      "Research Facility": "अनुसंधान सुविधा",
+      "Research Facility description": "यह सेल सबसे सक्रिय और मेहनती सेल में से एक है। ये हमेशा शिक्षा की गुणवत्ता में सुधार के लिए काम करते हैं।",
+      "Central Library": "केंद्रीय पुस्तकालय",
+      "Central Library description":  "केंद्रीय पुस्तकालय सबसे बड़े और सबसे लोकप्रिय पुस्तकालयों में से एक है। इसमें पुस्तकों, पत्रिकाओं और अन्य संसाधनों का एक विशाल संग्रह है।",
+      "Incubation Centre": "ऊष्मायन केंद्र",
+      "Incubation Centre description": "ऊष्मायन केंद्र एक अत्याधुनिक सुविधा है जो स्टार्ट अप कंपनियों और उद्यमियों को अपना व्यवसाय विकसित करने के लिए एक मंच प्रदान करता है",
+      "Media Centre": "मीडिया सेंटर",
+      "Media Centre description": "मीडिया केंद्र में विभिन्न प्रकार के मीडिया-संबंधित संसाधन हैं जिनका उपयोग अनुसंधान, मनोरंजन या शैक्षिक उद्देश्यों के लिए किया जा सकता है।"
     }
     
   }
