Translated Complete navbar Including Ust name

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,6 +1,9 @@
 {
   "home": {
     "navbar": {
+      "JCBoseUst": "J.C. Bose University of Science and Technology, YMCA, Faridabad",
+      "UST description 1": "(A Haryana State Government University)",
+      "UST description 2": "(Established by Haryana State Legislative Act No. 21 of 2009 & Recognised by UGC Act 1956 u/s 22 to Confer Degrees)",
       "Home": "Home",
       "About Us": "About Us",
       "Administration": "Administration",
