--- a/lang/hi.json
+++ b/lang/hi.json
@@ -1,7 +1,9 @@
 {
   "home": {
-    "JCBoseUST": "जे.सी. बोस विज्ञान और प्रौद्योगिकी विश्वविद्यालय, वाईएमसीए, फरीदाबाद",
     "navbar": {
+      "JCBoseUst": "जे.सी. बोस विज्ञान और प्रौद्योगिकी विश्वविद्यालय, वाईएमसीए, फरीदाबाद",
+      "UST description 1":  "(हरियाणा राज्य सरकार विश्वविद्यालय)",
+      "UST description 2":  "(हरियाणा राज्य विधान अधिनियम संख्या 21 2009 द्वारा स्थापित और यूजीसी अधिनियम 1956 यू/एस 22 डिग्री प्रदान करने के लिए मान्यता प्राप्त है)",
       "Home": "होम",
       "About Us": "हमारे बारे में",
       "Administration": "प्रशासन",
