--- a/lang/hi.json
+++ b/lang/hi.json
@@ -1,5 +1,7 @@
 {
   "home": {
+    "Explore": "अन्वेषण करें",
+    "the privileges": "विशेषाधिकारों का",
     "navbar": {
       "JCBoseUst": "जे.सी. बोस विज्ञान और प्रौद्योगिकी विश्वविद्यालय, वाईएमसीए, फरीदाबाद",
       "UST description 1":  "(हरियाणा राज्य सरकार विश्वविद्यालय)",
@@ -181,31 +183,6 @@
       "heading":"सूचना पट्ट",
       "viewAll": "सभी देखें"
     },
-    "footer": {
-      "Subscribe for Newsletter": "समाचार पत्र के लिए सदस्यता लें",
-      "Our Campus": "हमारा कैंपस",
-      "Campus Life": "कैंपस की ज़िंदगी",
-      "SUBMIT": "सब्मिट",
-      "Academic": "शैक्षणिक",
-      "Planning & Administration": "योजना और प्रशासन",
-      "Campus Safety": "परिसर सुरक्षा",
-
-      "Office of the Chancellor": "कुलाधिपति का कार्यालय",
-      "Facility Services": "सुविधा सेवा",
-      "Human Resources": "मानव संसाधन",
-      "Accessibility": "सरल उपयोग",
-      "Financial Aid": "आर्थिक सहायता",
-      "Food Services": "खाद्य सेवाएं",
-      "Housing": "आवास",
-      "Information Technologies": "सूचना प्रौद्योगिकी",
-      "Student Life": "छात्र जीवन",
-      "Canvas": "कैनवास", 
-      "Catalyst": "उत्प्रेरक", 
-      "Library": "पुस्तकालय", 
-      "Time Schedule": "समय सारणी",
-      "Apply for admissions": "प्रवेश के लिए आवेदन करें", 
-      "Pay my tuition": "मेरी ट्यूशन का भुगतान करें"
-    },
     "autoscrollfeatures": {
       "A": "ए",
       "Grade NAAC Accredited": "ग्रेड एनएएसी मान्यता प्राप्त",
@@ -228,6 +205,61 @@
       
 
     },
+    "footer": {
+      "Subscribe for Newsletter": "न्यूज़लेटर के लिए सदस्यता लें",
+      "Our Campus": "हमारा परिसर",
+      "Campus Life":"कैंपसलाइफ",
+      "SUBMIT": "सबमिट करें",
+      "Academic": "शैक्षणिक",
+      "Planning & Administration":  "योजना और प्रशासन",
+      "Campus Safety": "कैंपस सुरक्षा",
+      "Office of the Chancellor":  "कुलपति का कार्यालय",
+      "Facility Services": "सुविधा सेवाएँ",
+      "Human Resources": "मानव संसाधन",
+      "Accessibility": "पहुंच-योग्यता",
+      "Financial Aid": "वित्तीय सहायता",
+      "Food Services":  "खाद्य सेवाएँ",
+      "Housing":  "आवास",
+      "Information Technologies":  "सूचना प्रौद्योगिकी",
+      "Student Life": "छात्र जीवन",
+      "Canvas":  "कैनवास",
+      "Catalyst":"उत्प्रेरक",
+      "Library": "पुस्तकालय",
+      "Time Schedule": "समय अनुसूची",
+      "Apply for admissions":  "प्रवेश के लिए आवेदन करें",
+      "Pay my tuition": "मेरी ट्यूशन का भुगतान करें",
+      "360 Degree Feedback": "360 डिग्री फीडबैक",
+      "MoUs & Collaborations": "समझौता ज्ञापन और सहयोग",
+      "Holiday List": "छुट्टी सूची",
+      "Downloads": "डाउनलोड",
+      "Rules and Circulars": "नियम और परिपत्र",
+      "Guest House": "गेस्ट हाउस",
+      "Life@JCBoseUST": "जीवन@JCBoseUST",
+      "Contact Us": "संपर्क करें",
+      "Officer's Contacts": "अधिकारी के संपर्क",
+      "JUFA Elections(2022)": "जेयूएफए चुनाव(2022)",
+      "Archived News": "संग्रहीत समाचार",
+      "Policies": "नीतियों",
+      "News Feeds": "समाचार फ़ीड्स",
+      "Green Initiatives": "हरित पहल",
+      "Extension & Outreach": "विस्तार और आउटरीच",
+      "University Cells": "विश्वविद्यालय प्रकोष्ठ",
+      "UGC": "यूजीसी",
+      "DTE, Haryana": "डीटीई, हरियाणा",
+      "DigiLocker": "डिजिटल लॉकर",
+      "HSTES": "एचएसटीईएस",
+      "NPTEL": "एनपीटीईएल",
+      "AICTE": "एआईसीटीई",
+      "NATS": "नैट्स",
+      "HSHEC": "एचएसएचईसी",
+      "Quick Links": "त्वरित सम्पक",
+      "Important Links": "महत्वपूर्ण लिंक",
+      "Enter Email Address": "ईमेल पता दर्ज करें",
+      "TEL": "टैल.",
+      "EMAIL": "ईमेल",
+      "address": "NH-2 सेक्टर-6, मथुरा रोड, फरीदाबाद-121006, हरियाणा (भारत)"
+    },
+
     "scrollHint":
     {
       "EXPLORE": "और घूमें "
