Achievements scroll added faculty grid added

--- a/lang/en.json
+++ b/lang/en.json
@@ -159,8 +159,9 @@
       "Dean (Colleges)": "Dean (Colleges)",
       "Dean (Construction & Maintenance)": "Dean (Construction & Maintenance)",
       "Multimedia Centre": "Multimedia Centre",
-      "Sport Facilities": "Sport Facilities"
-
+      "Sport Facilities": "Sport Facilities",
+      "Student Welfare": "Student Welfare",
+      "Welfare Schemes": "Welfare Schemes"
     },
     "heading": {
       "tagline": "The true laboratory is the mind, where behind illusions we uncover the laws of truth.",
