--- a/lang/hi.json
+++ b/lang/hi.json
@@ -159,7 +159,9 @@
       "Dean (Construction & Maintenance)": "डीन (निर्माण और रखरखाव)",
       "Multimedia Centre": "मल्टीमीडिया सेंटर",
       "Sport Facilities": "खेल सुविधाएं",
-      "Welfare": "कल्याण"
+      "Welfare": "कल्याण",
+      "Student Welfare": "छात्र कल्याण",
+      "Welfare Schemes": "कल्याण योजनाएं"
     },
     "heading": {
       "tagline": "सच्ची प्रयोगशाला मन है, जहां भ्रम के पीछे हम सत्य के नियमों को उजागर करते हैं।",
