navabar menu updated

--- a/lang/en.json
+++ b/lang/en.json
@@ -161,7 +161,13 @@
       "Multimedia Centre": "Multimedia Centre",
       "Sport Facilities": "Sport Facilities",
       "Student Welfare": "Student Welfare",
-      "Welfare Schemes": "Welfare Schemes"
+      "Welfare Schemes": "Welfare Schemes",
+      "Affiliated Colleges": "Affiliated Colleges",
+      "List of Affiliated Colleges": "List of Affiliated Colleges",
+      "Scheme & Syllabus for Affiliated Colleges": "Scheme & Syllabus for Affiliated Colleges",
+      "Liberal Arts & Media Studies": "Liberal Arts & Media Studies",
+      "Engineering & Technology": "Engineering & Technology",
+      "Sciences": "Sciences"
     },
     "heading": {
       "tagline": "The true laboratory is the mind, where behind illusions we uncover the laws of truth.",
