--- a/lang/hi.json
+++ b/lang/hi.json
@@ -161,7 +161,13 @@
       "Sport Facilities": "खेल सुविधाएं",
       "Welfare": "कल्याण",
       "Student Welfare": "छात्र कल्याण",
-      "Welfare Schemes": "कल्याण योजनाएं"
+      "Welfare Schemes": "कल्याण योजनाएं",
+      "Affiliated Colleges": "संबद्ध कॉलेज",
+      "Scheme & Syllabus for Affiliated Colleges": "संबद्ध कॉलेजों के लिए योजना और पाठ्यक्रम",
+      "List of Affiliated Colleges": "संबद्ध कॉलेजों की सूची",
+      "Liberal & Media Studies": "लाइब्रल एंड मीडिया अध्ययन",
+      "Engineering & Technology": "इंजीनियरिंग और प्रौद्योगिकी",
+      "Sciences": ""
     },
     "heading": {
       "tagline": "सच्ची प्रयोगशाला मन है, जहां भ्रम के पीछे हम सत्य के नियमों को उजागर करते हैं।",
