navabar logic updated

--- a/lang/hi.json
+++ b/lang/hi.json
@@ -167,7 +167,7 @@
       "List of Affiliated Colleges": "संबद्ध कॉलेजों की सूची",
       "Liberal & Media Studies": "लाइब्रल एंड मीडिया अध्ययन",
       "Engineering & Technology": "इंजीनियरिंग और प्रौद्योगिकी",
-      "Sciences": ""
+      "Sciences": "विज्ञान"
     },
     "heading": {
       "tagline": "सच्ची प्रयोगशाला मन है, जहां भ्रम के पीछे हम सत्य के नियमों को उजागर करते हैं।",
