faculty and faculty profile-navbar

--- a/lang/en.json
+++ b/lang/en.json
@@ -192,6 +192,7 @@
       "viewAll": "View All"
     },
     "footer": {
+      "Explore more": "Explore more",
       "TEL": "TEL",
       "EMAIL": "EMAIL",
       "Subscribe for Newsletter": "Subscribe for Newsletter",
