--- a/lang/hi.json
+++ b/lang/hi.json
@@ -214,6 +214,7 @@
 
     },
     "footer": {
+      "Explore more": "और खोजें",
       "Subscribe for Newsletter": "न्यूज़लेटर के लिए सदस्यता लें",
       "Our Campus": "हमारा परिसर",
       "Campus Life":"कैंपसलाइफ",
