navabar menuitems updated

--- a/lang/en.json
+++ b/lang/en.json
@@ -167,7 +167,16 @@
       "Scheme & Syllabus for Affiliated Colleges": "Scheme & Syllabus for Affiliated Colleges",
       "Liberal Arts & Media Studies": "Liberal Arts & Media Studies",
       "Engineering & Technology": "Engineering & Technology",
-      "Sciences": "Sciences"
+      "Sciences": "Sciences",
+      "Informatics and Computing": "Informatics and Computing",
+      "Interdisciplinary Studies & Research": "Interdisciplinary Studies & Research",
+      "Incubation Founder": "Incubation Founder",
+      "Workshops": "Workshops",
+      "E-Books & E-Journals": "E-Books & E-Journals",
+      "Digital Learning Management Center": "Digital Learning Management Center",
+      "Robotics Centre": "Robotics Centre",
+      "Smart Boards": "Smart Boards",
+      "Media Centre": "Media Centre"
     },
     "heading": {
       "tagline": "The true laboratory is the mind, where behind illusions we uncover the laws of truth.",
