--- a/lang/hi.json
+++ b/lang/hi.json
@@ -167,7 +167,16 @@
       "List of Affiliated Colleges": "संबद्ध कॉलेजों की सूची",
       "Liberal & Media Studies": "लाइब्रल एंड मीडिया अध्ययन",
       "Engineering & Technology": "इंजीनियरिंग और प्रौद्योगिकी",
-      "Sciences": "विज्ञान"
+      "Sciences": "विज्ञान",
+      "Informatics and Computing": "इन्फार्मेटिक्स और कंप्यूटिंग",
+      "Interdisciplinary Studies & Research": "इंटरडिसिप्लिनरी स्टडीज एंड रिसर्च",
+      "Incubation Founder": "ऊष्मायन संस्थापक",
+      "Workshops": "कार्यशालाएं",
+      "E-Books & E-Journals": "ई-बुक्स और ई-जर्नल्स",
+      "Digital Learning Management Center": "डिजिटल लर्निंग मैनेजमेंट सेंटर",
+      "Robotics Centre": "रोबोटिक्स केंद्र",
+      "Smart Boards": "स्मार्ट बोर्ड",
+      "Media Centre": "मीडिया केंद्र"
     },
     "heading": {
       "tagline": "सच्ची प्रयोगशाला मन है, जहां भ्रम के पीछे हम सत्य के नियमों को उजागर करते हैं।",
