recruiters and changes in featurecard

--- a/lang/en.json
+++ b/lang/en.json
@@ -176,7 +176,8 @@
       "Digital Learning Management Center": "Digital Learning Management Center",
       "Robotics Centre": "Robotics Centre",
       "Smart Boards": "Smart Boards",
-      "Media Centre": "Media Centre"
+      "Media Centre": "Media Centre",
+      "Affiliations": "Affiliations"
     },
     "heading": {
       "tagline": "The true laboratory is the mind, where behind illusions we uncover the laws of truth.",
