--- a/lang/hi.json
+++ b/lang/hi.json
@@ -176,7 +176,8 @@
       "Digital Learning Management Center": "डिजिटल लर्निंग मैनेजमेंट सेंटर",
       "Robotics Centre": "रोबोटिक्स केंद्र",
       "Smart Boards": "स्मार्ट बोर्ड",
-      "Media Centre": "मीडिया केंद्र"
+      "Media Centre": "मीडिया केंद्र",
+      "Affiliations": "संबद्ध कॉलेज"
     },
     "heading": {
       "tagline": "सच्ची प्रयोगशाला मन है, जहां भ्रम के पीछे हम सत्य के नियमों को उजागर करते हैं।",
