--- a/lang/hi.json
+++ b/lang/hi.json
@@ -3,7 +3,7 @@
     "Explore": "अन्वेषण करें",
     "the privileges": "विशेषाधिकारों का",
     "navbar": {
-      "JCBoseUst": "जे.सी. बोस विज्ञान और प्रौद्योगिकी विश्वविद्यालय, वाईएमसीए, फरीदाबाद",
+      "JCBoseUst": "जे.सी. बोस विज्ञान और प्रौद्योगिकी विश्वविद्यालय, वाईएमसीए, फरीदाबाद (हरियाणा)",
       "UST description 1":  "(हरियाणा राज्य सरकार विश्वविद्यालय)",
       "UST description 2":  "(हरियाणा राज्य विधान अधिनियम संख्या 21 2009 द्वारा स्थापित और यूजीसी अधिनियम 1956 यू/एस 22 डिग्री प्रदान करने के लिए मान्यता प्राप्त है)",
       "Home": "होम",
